--- a/donate.html
+++ b/donate.html
@@ -7,8 +7,8 @@
     <title>Donate</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../assets/img/refavicon.png">
-    <link rel="stylesheet" href="../assets/css/refroot-style.css">
+    <link rel="shortcut icon" href="./assets/img/refavicon.png">
+    <link rel="stylesheet" href="./assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
@@ -16,13 +16,13 @@
     <nav class="navbar navbar-expand-lg bg-transparent">
       <div class="container">
          <a class="navbar-brand" href="./home.html">
-           <img src="../assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+           <img src="./assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
            <span class="refroot-title">Semper Radicata</span>
          </a>
 
            <ul class="navbar-nav me-auto mb-2">
              <li class="nav-item">
-               <a class="nav-link" aria-current="page" href="./home.html"><span class="fas fa-home ref-nav"></span></a>
+               <a class="nav-link" aria-current="page" href="./home.html"><i class="fas fa-home ref-nav"></i><span class="text-success"> Home</span></a>
              </li>
            </ul>
        </div>
@@ -552,8 +552,8 @@
     </div>
 
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright:
-      <p class="text-dark"><b>SemperRadicata.org</b></p>
+      © 2022 Group 7's Project for:
+      <p class="text-dark"><b>KodeGo</b></p>
     </div>
   </footer>
   <script>
