--- a/fot.html
+++ b/fot.html
@@ -7,8 +7,8 @@
     <title>Forgiving Others</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../assets/img/refavicon.png">
-    <link rel="stylesheet" href="../assets/css/refroot-style.css">
+    <link rel="shortcut icon" href="./assets/img/refavicon.png">
+    <link rel="stylesheet" href="./assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg bg-light">
           <div class="container">
             <a class="navbar-brand" href="./home.html">
-              <img src="../assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+              <img src="./assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
               <span class="refroot-title">Semper Radicata</span>
             </a>
                   
@@ -66,6 +66,9 @@
                       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                       <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
+                    <div class="m-3">
+                      <button class="btn btn-success"><a href="./login-reg.html" class="text-light"><i class="fas fa-user"> </i><span> Login</span></a></button>
+                    </div>
                   </div>
               </div>
           </div>
@@ -203,8 +206,8 @@
           </section>
         </div>
         <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2022 MiniProj-1 for KodeGo by:
-          <p class="text-dark"><b>Dhel Atienza</b></p>
+          © 2022 Group 7's Project for:
+          <p class="text-dark"><b>KodeGo</b></p>
         </div>
       </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
