--- a/login-reg.html
+++ b/login-reg.html
@@ -7,8 +7,8 @@
     <title>Free Downloads</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../assets/img/refavicon.png">
-    <link rel="stylesheet" href="../assets/css/refroot-style.css">
+    <link rel="shortcut icon" href="./assets/img/refavicon.png">
+    <link rel="stylesheet" href="./assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg bg-transparent">
       <div class="container">
         <a class="navbar-brand" href="./home.html">
-          <img src="../assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center"><span class="refroot-title">Semper Radicata</span></a>
+          <img src="./assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center"><span class="refroot-title">Semper Radicata</span></a>
             <ul class="navbar-nav me-auto mb-2">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="./home.html"><i class="fas fa-home ref-nav"></i><span class="text-success"> Home</span></a>
@@ -57,7 +57,7 @@
       </div>
     </form>
     </section>
-    <script src="../assets/css/refroot-style.css"></script>
+    <script src="./assets/js/refroot.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
