--- a/salvation.html
+++ b/salvation.html
@@ -9,8 +9,8 @@
     <title>Salvation</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../assets/img/refavicon.png">
-    <link rel="stylesheet" href="../assets/css/refroot-style.css">
+    <link rel="shortcut icon" href="./assets/img/refavicon.png">
+    <link rel="stylesheet" href="./assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container">
         <a class="navbar-brand" href="./home.html">
-          <img src="../assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
+          <img src="./assets/img/refroots-logo.png" alt="Logo" width="60" height="60" class="d-inline-block align-text-center">
           <span class="refroot-title">Semper Radicata</span>
         </a>
               
@@ -185,19 +185,19 @@
             <div class="container">
               <div class="row">
                 <div class="my-5">
-                <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad1.png" alt="eyeglass-ad-banner"></a>
+                <a href="https://invle.co/clejo67" target="_blank" rel="noopener noreferrer" ><img src="./assets/img/eyeglass-ad1.png" alt="eyeglass-ad-banner"></a>
                 </div>
               <div class="mb-5">
-                <a href="https://invle.co/clejo5a" target="_blank"><img src="../assets/img/shopee-banner1.jpg" alt="shopee-ad-banner"></a>
+                <a href="https://invle.co/clejo5a" target="_blank" rel="noopener noreferrer"><img src="./assets/img/shopee-banner1.jpg" alt="shopee-ad-banner"></a>
               </div>
               <div class="mb-5">
-                <a href="https://invol.co/clejo3u" target="_blank"><img src="../assets/img/lazada-banner1.jpg" alt="lazada-ad-banner"></a>
+                <a href="https://invol.co/clejo3u" target="_blank" rel="noopener noreferrer"><img src="./assets/img/lazada-banner1.jpg" alt="lazada-ad-banner"></a>
               </div>
               <div class="mb-5">
-                <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad2.png" alt="eyeglass-ad-banner"></a>
+                <a href="https://invle.co/clejo67" target="_blank" rel="noopener noreferrer"><img src="./assets/img/eyeglass-ad2.png" alt="eyeglass-ad-banner"></a>
               </div>
               <div class="mb-5">
-                <a href="https://invle.co/clejo67" target="_blank"><img src="../assets/img/eyeglass-ad3.png" alt="eyeglass-ad-banner"></a>
+                <a href="https://invle.co/clejo67" target="_blank" rel="noopener noreferrer"><img src="./assets/img/eyeglass-ad3.png" alt="eyeglass-ad-banner"></a>
               </div>
             </div>
           </div>
@@ -207,19 +207,19 @@
   <footer class="bg-light text-center text-dark">
     <div class="container p-4">
       <section class="mb-4">
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-facebook-f"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-twitter"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-instagram"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-linkedin-in"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-github"></i></a>
       </section>
   
@@ -293,16 +293,16 @@
   
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="https://www.gty.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
+                <a href="https://www.gty.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
               </li>
               <li>
-                <a href="https://www.chapellibrary.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Chapel Library</span></a>
+                <a href="https://www.chapellibrary.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Chapel Library</span></a>
               </li>
               <li>
-                <a href="https://www.ligonier.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Ligonier Ministries</span></a>
+                <a href="https://www.ligonier.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Ligonier Ministries</span></a>
               </li>
               <li>
-                <a href="https://www.mzbi.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
+                <a href="https://www.mzbi.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
               </li>
             </ul>
           </div>
@@ -310,8 +310,8 @@
       </section>
     </div>
     <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2022 MiniProj-1 for KodeGo by:
-      <p class="text-dark"><b>Dhel Atienza</b></p>
+      © 2022 Group 7's Project for:
+      <p class="text-dark"><b>KodeGo</b></p>
     </div>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
