added rel=noopener noreferrer to all external links

--- a/about.html
+++ b/about.html
@@ -66,6 +66,9 @@
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <div class="m-3">
+                  <button class="btn btn-success"><a href="./login-reg.html" class="text-light"><i class="fas fa-user"> </i><span> Login</span></a></button>
+                </div>
               </div>
           </div>
       </div>
@@ -141,19 +144,19 @@
   <footer class="bg-light text-center text-dark">
     <div class="container p-4">
       <section class="mb-4">
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-facebook-f"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-twitter"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-instagram"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-linkedin-in"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/codenimus/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/codenimus/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-github"></i></a>
       </section>
   
@@ -227,16 +230,16 @@
   
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="https://www.gty.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
+                <a href="https://www.gty.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
               </li>
               <li>
-                <a href="https://www.chapellibrary.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Chapel Library</span></a>
+                <a href="https://www.chapellibrary.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Chapel Library</span></a>
               </li>
               <li>
-                <a href="https://www.ligonier.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Ligonier Ministries</span></a>
+                <a href="https://www.ligonier.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Ligonier Ministries</span></a>
               </li>
               <li>
-                <a href="https://www.mzbi.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
+                <a href="https://www.mzbi.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
               </li>
             </ul>
           </div>
