--- a/donate.html
+++ b/donate.html
@@ -435,7 +435,7 @@
 
               <h6 class="alert alert-success text-center">Donate with Paypal</h6>
                 <p>
-                  <a href="https://www.paypal.com/ph/signin" target="_blank"><button type="button" class="btn btn-success rounded-pill"><i class="fa fa-paypal mr-2"></i> Log into my Paypal</button></a>
+                  <a href="https://www.paypal.com/ph/signin" target="_blank" rel="noopener noreferrer"><button type="button" class="btn btn-success rounded-pill"><i class="fa fa-paypal mr-2"></i> Log into my Paypal</button></a>
                 </p>
                 <p class="text-muted text-center">Your personal data will be used to process your donations, support your experience throughout this website, and for other purposes described in our <a href="./privacy-policy.html" target="_blank" class="text-success">privacy policy</a>.
                 </p>
@@ -447,19 +447,19 @@
   <footer class="bg-light text-center text-dark">
     <div class="container p-4">
       <section class="mb-4">
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-facebook-f"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-twitter"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-instagram"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-linkedin-in"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/codenimus/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/codenimus/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-github"></i></a>
       </section>
   
@@ -533,16 +533,16 @@
   
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="https://www.gty.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
+                <a href="https://www.gty.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
               </li>
               <li>
-                <a href="https://www.chapellibrary.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Chapel Library</span></a>
+                <a href="https://www.chapellibrary.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Chapel Library</span></a>
               </li>
               <li>
-                <a href="https://www.ligonier.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Ligonier Ministries</span></a>
+                <a href="https://www.ligonier.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Ligonier Ministries</span></a>
               </li>
               <li>
-                <a href="https://www.mzbi.org/" target="_blank" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
+                <a href="https://www.mzbi.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
               </li>
             </ul>
           </div>
