--- a/systematic-theology.html
+++ b/systematic-theology.html
@@ -66,6 +66,9 @@
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <div class="m-3">
+                  <button class="btn btn-success"><a href="./login-reg.html" class="text-light"><i class="fas fa-user"> </i><span> Login</span></a></button>
+                </div>
               </div>
           </div>
       </div>
