--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -67,6 +67,9 @@
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <div class="m-3">
+                  <button class="btn btn-success"><a href="./login-reg.html" class="text-light"><i class="fas fa-user"> </i><span> Login</span></a></button>
+                </div>
               </div>
             </div>
           </div>
@@ -203,19 +206,19 @@
   <footer class="text-center text-dark">
     <div class="bg-light border-top container-fluid pt-2">
       <section class="mb-4">
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-facebook-f"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://twitter.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-twitter"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-instagram"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-linkedin-in"></i></a>
 
-        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/" target="_blank" role="button">
+        <a class="btn btn-outline-success btn-floating m-1" href="https://github.com/" target="_blank" rel="noopener noreferrer" role="button">
           <i class="fab fa-github"></i></a>
       </section>
   
