edited footer all pages

--- a/about.html
+++ b/about.html
@@ -110,28 +110,28 @@
       <div class="container">
       <div class="row">
         <div class="row row-cols-1 row-cols-md-4 g-4 ps-4">
-          <div class="col-lg-4 ps-3">
+          <div class="col-lg-4 col-md-4 ps-3">
               <img src="https://cdn.pixabay.com/photo/2016/01/26/05/29/type-1161949_960_720.jpg" class="card-img-top rounded-pill" alt="manual-publish">
               <div class="card-body text-center">
                 <h5 class="card-title pt-2">We Publish</h5>
-                <p class="card-text px-3"><span class="fst-italic">God reavealed Himself in a book</span> (<a href="https://biblia.com/bible/esv/Heb1.1" target="_blank"><span class="ref-nav fst-italic">Heb. 1:1</span></a>). In that sense, reading is an essential part of every Christian's life.
+                <p class="card-text px-3"><span class="fst-italic">God reavealed Himself in a book</span> (<a href="https://biblia.com/bible/esv/Heb1.1" target="_blank" rel="noopener noreferrer"><span class="ref-nav fst-italic">Heb. 1:1</span></a>). In that sense, reading is an essential part of every Christian's life.
                   For now, we publish online articles with downloadable PDFs so that Christians can grow in their understanding of God and of themselves. We plan to publish physical books as well.</p>
               </div>
           </div>
-          <div class="col-lg-4 ps-3">
+          <div class="col-lg-4 col-md-4 ps-3">
               <img src="https://cdn.pixabay.com/photo/2019/03/19/09/03/studio-4065108_960_720.jpg" class="card-img-top rounded-pill" alt="podcast-set-up">
               <div class="card-body text-center">
                 <h5 class="card-title pt-2">We Broadcast</h5>
-                <p class="card-text px-3"><span class="fst-italic">Faith comes by hearing</span> (<a href="https://biblia.com/bible/esv/Ro10.17" target="_blank"><span class="ref-nav fst-italic">Rom. 10:17</span></a>).
+                <p class="card-text px-3"><span class="fst-italic">Faith comes by hearing</span> (<a href="https://biblia.com/bible/esv/Ro10.17" target="_blank" rel="noopener noreferrer"><span class="ref-nav fst-italic">Rom. 10:17</span></a>).
                   That makes hearing the word of Christ is essential to our spiritual life. Every week, we air podcasts, video teaching series and more.
                   We're always adding trustworthy and curated teachings from other reformed teachers will soon be available 24/7.</p>
                 </div>
           </div>
-          <div class="col-lg-4 ps-3">
+          <div class="col-lg-4 col-md-4 ps-3">
               <img src="https://cdn.pixabay.com/photo/2013/02/14/05/02/new-york-city-81533_960_720.jpg" class="card-img-top rounded-pill" alt="church-congregation">
               <div class="card-body text-center">
                 <h5 class="card-title pt-2">We Converge</h5>
-                <p class="card-text px-3"><span class="fst-italic">Iron sharpens iron</span> (<a href="https://biblia.com/bible/esv/Pr27.17" target="_blank"><span class="ref-nav fst-italic">Prov. 27:17</span></a>).
+                <p class="card-text px-3"><span class="fst-italic">Iron sharpens iron</span> (<a href="https://biblia.com/bible/esv/Pr27.17" target="_blank" rel="noopener noreferrer"><span class="ref-nav fst-italic">Prov. 27:17</span></a>).
                   Aside from converging online through livestreams, we aim to expand our Christian gatherings at physical events
                   to study God's Word for mutual edification; to bless the local church and strengthen its members for greater service.</p>
                 </div>
@@ -199,9 +199,10 @@
           <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Important Links</h5>
 
+            <div class="d-flex justify-content-center align-items-center text-start">
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="./home.html" class="text-success"><span><i class="fas fa-home"></i> Home</span></a>
+                <a href="./about.html" class="text-success"><span><i class="fas fa-check-double"></i> About Us</span></a>
               </li>
               <li class="dropdown text-success">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -223,11 +224,13 @@
                 <a href="terms-conditions.html" class="text-success"><span><i class="fas fa-hand-point-right"></i> Terms & Conditions</span></a>
               </li>
             </ul>
+            </div>
           </div>
   
           <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Resource Links</h5>
-  
+            
+            <div class="d-flex justify-content-center align-items-center text-start ">
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="https://www.gty.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
@@ -242,13 +245,14 @@
                 <a href="https://www.mzbi.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
               </li>
             </ul>
+            </div>
           </div>
   
         </div>
       </section>
     </div>
 
-    <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Group 7's Project for:
       <p class="text-dark"><b>KodeGo</b></p>
     </div>
