--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
             <h1 class="fst-italic display-2 px-3 mb-3 d-flex justify-content-center">ALWAYS ROOTED & REFORMING</h1>
               <h4 class="fst-italic px-3 d-flex justify-content-center">Sola Gratia / Sola Fide / Solus Christus <br>Sola Scriptura / Soli Deo Gloria</h4>
             <div class="mb-3 d-flex justify-content-center">
-            <a class="btn btn-outline-success btn-lg" href="./five-solas.html" role="button"><b>You've Got to Read More</b></a>
+            <a class="btn btn-success btn-lg fst-italic" href="./five-solas.html" role="button"><b>You've Got to Read More</b></a>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
           <p class="display-5 pb-3">What is the sense of that statement?</p>
           <p class="display-6">Come! Let's study its origin and know how the Truth really means in the lives of True Christians.</p>
         <div class="mb-3 d-flex justify-content-center">
-          <a class="btn btn-outline-success btn-lg" href="./christianity212.html" role="button"><b>Start Here</b></a>
+          <a class="btn btn-outline-success btn-lg" href="./christianity212.html" role="button"><b>Know the Truth!</b></a>
         </div>
     </div>
   </section>
@@ -183,9 +183,6 @@
           <div class="carousel-item">
             <img src="https://images.unsplash.com/photo-1491439996916-067ed99cba60?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="md-block" alt="...">
           </div>
-        </div>
-        <div class="text-center pt-3">
-          <a href="./about.html" class="btn btn-success btn-lg" tabindex="-1" role="button" aria-disabled="true"> See Our Mission</a>
         </div>
       </div>
     </div>
@@ -249,6 +246,7 @@
           <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Important Links</h5>
 
+            <div class="d-flex justify-content-center align-items-center text-start">
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="./about.html" class="text-success"><span><i class="fas fa-check-double"></i> About Us</span></a>
@@ -273,11 +271,13 @@
                 <a href="terms-conditions.html" class="text-success"><span><i class="fas fa-hand-point-right"></i> Terms & Conditions</span></a>
               </li>
             </ul>
+            </div>
           </div>
   
           <div class="col-lg-6 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Resource Links</h5>
-  
+            
+            <div class="d-flex justify-content-center align-items-center text-start ">
             <ul class="list-unstyled mb-0">
               <li>
                 <a href="https://www.gty.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Grace to You</span></a>
@@ -292,13 +292,14 @@
                 <a href="https://www.mzbi.org/" target="_blank" rel="noopener noreferrer" class="text-success"><span><i class="fas fa-external-link-alt"></i> Mt. Zion Bible Institute</span></a>
               </li>
             </ul>
+            </div>
           </div>
   
         </div>
       </section>
     </div>
 
-    <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Group 7's Project for:
       <p class="text-dark"><b>KodeGo</b></p>
     </div>
