--- a/registration.html
+++ b/registration.html
@@ -28,33 +28,9 @@
 
   <section class="container d-flex justify-content-center align-items-center p-5">
     <form class="justify-content-center align-items-center bg-success bg-opacity-10 shadow-lg p-5 mb-5 rounded">
-      <p>Not a member yet? <a href="registration.html"><span class="text-success fw-bold">Create an Account</span></a></p>
-      <p>Or log in with email</p>
-      <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="floatingInput" placeholder="juan@example.com" aria-describedby="uNameHelp">
-        <label for="floatingInput">Email address</label>
-        <div id="uNameHelp" class="form-text">We'll never share your email with anyone else.</div>
-      </div>
-      <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-        <label for="inputPassword">Password</label><i class="fas fa-eye position-absolute top-50 end-0 translate-middle" id="showHide"></i>
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Remember me</label>
-      </div>
-      <button type="submit" class="btn btn-success">Submit</button>
+      <p>Already have account? </span><a href="login-reg.html"><span class="text-success fw-bold">Back to Login Page</span></a></p>
+      
 
-      <div class="mt-3 pt-3 alert alert-secondary">
-        <div class="row">
-          <div class="col-sm-5 d-flex justify-content-center align-items-center text-center">
-            <a href="home.html"><button type="button" class="btn btn-danger">Cancel</button></a>
-          </div>
-          <div class="col-sm-7 d-flex justify-content-center align-items-center text-center pt-3">
-        <p class="psw">Forgot <a href="#" class="text-success">password?</a></p>
-          </div>
-        </div>
-      </div>
     </form>
     </section>
     <script src="./assets/js/refroot.js"></script>
