--- a/login-reg.html
+++ b/login-reg.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Downloads</title>
+    <title>Log In</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Mr+Dafoe&family=UnifrakturCook&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e170880bfe.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/img/refavicon.png">
     <link rel="stylesheet" href="./assets/css/refroot-style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
 </head>
 <body>
   <header>
@@ -37,13 +38,13 @@
       </div>
       <div class="form-floating mb-3">
         <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-        <label for="inputPassword">Password</label><i class="fas fa-eye position-absolute top-50 end-0 translate-middle" id="showHide"></i>
+        <label for="inputPassword">Password</label><i class="fas fa-eye-slash position-absolute top-50 end-0 translate-middle" id="showHide"></i>
       </div>
       <div class="mb-3 form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Remember me</label>
       </div>
-      <button type="submit" class="btn btn-success">Submit</button>
+      <button type="submit" class="btn btn-success">Log In</button>
 
       <div class="mt-3 pt-3 alert alert-secondary">
         <div class="row">
@@ -51,13 +52,48 @@
             <a href="home.html"><button type="button" class="btn btn-danger">Cancel</button></a>
           </div>
           <div class="col-sm-7 d-flex justify-content-center align-items-center text-center pt-3">
-        <p class="psw">Forgot <a href="#" class="text-success">password?</a></p>
+        <p class="psw text-success" id="forgot-pass" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Forgot password?</p>
           </div>
         </div>
       </div>
     </form>
     </section>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content bg-success">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 text-white" id="staticBackdropLabel">Reset Password</h1>
+
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="input-group mb-3">
+  <input type="email" class="form-control" placeholder="Enter email to continue" aria-label="Enter email to continue" aria-describedby="button-addon2">
+  <button class="btn btn-secondary" type="button" id="button-addon2">Send Password Reset Link</button>
+  <p class="text-center pt-3 px-5 text-white">Please note that if this email is not registered on
+    Semper Radicata, no email will be sent.</p>
+
+    <!-- <form action="?" method="POST">
+      <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+      <br/>
+      <input type="submit" value="Submit">
+    </form> -->
+
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <script src="./assets/js/refroot.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <!-- <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+    async defer> -->
+</script>
 </body>
 </html>
