--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
                   <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
                 <div class="m-3">
-                  <button class="btn btn-success"><a href="./login-reg.html" class="text-light"><i class="fas fa-user"> </i><span> Login</span></a></button>
+                  <button class="btn btn-success"><a href="./login.html" class="text-light"><i class="fas fa-user"> </i><span> Login</span></a></button>
                 </div>
               </div>
             </div>
