--- a/login-reg.html
+++ b/login-reg.html
@@ -46,7 +46,7 @@
       </div>
       <button type="submit" class="btn btn-success">Log In</button>
 
-      <div class="mt-3 pt-3 alert alert-secondary">
+      <!-- <div class="mt-3 pt-3 alert alert-secondary">
         <div class="row">
           <div class="col-sm-5 d-flex justify-content-center align-items-center text-center">
             <a href="home.html"><button type="button" class="btn btn-danger">Cancel</button></a>
@@ -55,7 +55,7 @@
         <p class="psw text-success" id="forgot-pass" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Forgot password?</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </form>
     </section>
 
