--- a/wbc.html
+++ b/wbc.html
@@ -205,6 +205,39 @@
             </div>
           </section>
         </div>
+
+        <button type="button" class="btn btn-primary fixedMod bg-transparent border-0" data-bs-toggle="modal" data-bs-target="#chatModal"><span class="fas fa-comments text-secondary"></span></button>
+
+<div class="modal" id="chatModal">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+
+      <div class="modal-body">
+        <div class="container">
+          <h1 class="text-center">What's Your Theological Question</h1>
+              <div class="d-flex bg-success bg-opacity-75 border rounded-2">
+              <img src="assets/img/refroots-logo.png" class="me-3 rounded-circle float-start img-thumbnail m-1" width="75px" alt="...">
+              <div class="mt-3">
+                  <h5 class="fw-bold fst-italic">Root</h5>
+                  <span class="text-center online-stat">Online</span>
+              </div>
+              </div>
+
+          <div id="chatContainer" class="container bg-warning bg-opacity-25 border rounded-2 overflow-auto"></div>
+          <div class="input-group">
+              <input id="textbox" type="text" class="form-control">
+              <button id="sendBtn" class="btn btn-success opacity-75" type="button">Send</button>
+          </div>
+      </div>
+      </div>
+
+      <div class="container text-center mb-3">
+        <button type="button" class="btn btn-outline-danger me-3 pe-3" data-bs-dismiss="modal">Close</button>
+      </div>
+
+    </div>
+  </div>
+</div>
     
         <div class="text-center p-1" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2022 Group 7's Project for:
@@ -213,5 +246,6 @@
       </footer>
     
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <script src="assets/js/chat-modal.js"></script>
     </body>
     </html>
