--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href=".assets/js/sb-admin-2.min.css" rel="stylesheet">
+    <link href="assets/js/sb-admin-2.min.css" rel="stylesheet">
  
 
 </head>
@@ -95,6 +95,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
 
     <!-- Our script must be loaded after firebase references -->
-    <script src=".assets/js/register.js"></script>
+    <script src="assets/js/register.js"></script>
 
 </html>
