--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="./assets/js/sb-admin-2.min.css" rel="stylesheet">
+    <link href="assets/js/sb-admin-2.min.css" rel="stylesheet">
  
 
 </head>
@@ -82,7 +82,7 @@
      <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
  
      <!-- Our script must be loaded after firebase references -->
-     <script src=".assets/js/register.js"></script>
+     <script src="assets/js/register.js"></script>
  
 
     </div>
