--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Form Registration</title>
+    <title>Form Login</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -61,7 +61,7 @@
                       
                         <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+                                <!-- <a class="small" href="forgot-password.html">Forgot Password?</a> -->
                             </div>
                             <div class="text-center">
                                 <a class="small" href="register.html">Register and Create Account</a>
