--- a/forgot-password.html
+++ b/forgot-password.html
@@ -50,9 +50,9 @@
                                                 id="email" aria-describedby="emailHelp"
                                                 placeholder="Enter Email Address...">
                                         </div>
-                                        <!-- <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                     <a href="#" class="btn btn-primary btn-user btn-block">
                                             Reset Password
-                                        </a> -->
+                                        </a> 
                                     </form>
                                     <hr>
                                     <div class="text-center">
