--- a/logged.html
+++ b/logged.html
@@ -21,6 +21,7 @@
     <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
     <script src="assets/js/register.js"></script>
     <script src="assets/js/dashboard.js"></script>
+    <script src="assets/js/checker.js"></script>
   
 
 
@@ -94,8 +95,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Periodicals</h6>
-                        <!-- <a class="collapse-item" href="blank.html">Church and the State</a> -->
-                        <a class="collapse-item" href="#">Temptation</a>
+                       <a class="collapse-item" href="#">Temptation</a>
                         <a class="collapse-item" href="#">Providence</a>
                         <a class="collapse-item" href="#">Conscience</a>
                     </div>
@@ -366,9 +366,7 @@
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                        <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a> -->
-                    </div>
+             </div>
 
               
 
@@ -494,25 +492,6 @@
         <i class="fas fa-angle-up"></i>
     </a>
 
-    <!-- Logout Modal
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" onclick="deleteItems()" href="login.html">Logout</a>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <!-- Logout Modal-->
     <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -547,9 +526,6 @@
     <!-- Page level plugins -->
     <script src="vendor/chart.js/Chart.min.js"></script>
 
-    <!-- Page level custom scripts -->
-    <!-- <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script> -->
 
 </body>
 
