--- a/ctp4.html
+++ b/ctp4.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="./assets/img/refavicon.png">
+    <link rel="shortcut icon" href="assets/img/refavicon.png">
     <title>Mini Project 2 Dashboard</title>
 
     <!-- Custom fonts for this template-->
@@ -18,10 +18,10 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <script src="js/register.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/checker.js"></script>
+    <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
+    <script src="assets/js/register.js"></script>
+    <script src="assets/js/dashboard.js"></script>
+    <script src="assets/js/checker.js"></script>
   
 
 
@@ -310,7 +310,7 @@ aria-hidden="true">
 <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
 <!-- Custom scripts for all pages-->
-<script src="js/sb-admin-2.min.js"></script>
+<script src="assets/js/sb-admin-2.min.js"></script>
 
 <!-- Page level plugins -->
 <script src="vendor/chart.js/Chart.min.js"></script>
