--- a/logged.html
+++ b/logged.html
@@ -95,7 +95,7 @@
                         <h6 class="collapse-header">Periodicals</h6>
                        <a class="collapse-item" href="ctp4.html">Grade Broadcaster</a>
                         <a class="collapse-item" href="ctp5.html">Providence</a>
-                        <a class="collapse-item" href="ctp6.html">Conscience</a>
+                        <a class="collapse-item" href="ctp6.html">Bible Courses</a>
                     </div>
                 </div>
             </li>
