--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
-    <script src="js/register.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script src="js/checker.js"></script>
+    <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
+    <script src="assets/js/register.js"></script>
+    <script src="assets/js/dashboard.js"></script>
+    <script src="assets/js/checker.js"></script>
   
 
 
@@ -36,7 +36,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="logged.html">
               
                 <div class="sidebar-brand-text mx-3">Welcome <br>
                 <sup>
@@ -95,7 +95,7 @@
                         <h6 class="collapse-header">Periodicals</h6>
                        <a class="collapse-item" href="ctp4.html">Grade Broadcaster</a>
                         <a class="collapse-item" href="ctp5.html">Providence</a>
-                        <a class="collapse-item" href="ctp6.html">Conscience</a>
+                        <a class="collapse-item" href="ctp6.html">Bible Courses</a>
                     </div>
                 </div>
             </li>
@@ -212,14 +212,14 @@
                                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Profile
                                 </a>
-                                <a class="dropdown-item" href="#">
+                              <!--  <a class="dropdown-item" href="#">
                                     <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Settings
                                 </a>
                                 <a class="dropdown-item" href="#">
                                     <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Activity Log
-                                </a>
+                                </a> -->
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="" data-toggle="modal" data-target="#logoutModal">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
@@ -469,10 +469,10 @@
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    <script src="assets/js/sb-admin-2.min.js"></script>
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    <!-- <script src="vendor/chart.js/Chart.min.js"></script> -->
 
 
 </body>
